--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,10 +1,20 @@
 @font-face {
-    font-family: 'Unica';
-    src: url('NeueHaasUnicaPro-Thin.eot'); /* IE9 Compat Modes */
-    src: url('NeueHaasUnicaPro-Thin.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('NeueHaasUnicaPro-Thin.woff') format('woff'), /* Modern Browsers */
-         url('NeueHaasUnicaPro-Thin.ttf')  format('truetype'), /* Safari, Android, iOS */
-         url('NeueHaasUnicaPro-Thin.svg#3e9b4870ff5e15180f6a2671c500cc54') format('svg'); /* Legacy iOS */
+    font-family: 'CircularStd-Bold';
+    src: url('CircularStd-Bold.eot'); /* IE9 Compat Modes */
+    src: url('CircularStd-Bold.woff') format('woff'), /* Modern Browsers */
+         url('CircularStd-Bold.ttf')  format('truetype');, /* Safari, Android, iOS */
     font-style:   normal;
     font-weight:  normal;
 }
+
+div {
+font-family: CircularStd-Bold
+}
+
+span {
+font-family: CircularStd-Bold
+}
+
+
+/*url('NeueHaasUnicaPro-Thin.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+/*url('NeueHaasUnicaPro-Thin.svg#3e9b4870ff5e15180f6a2671c500cc54') format('svg'); /* Legacy iOS */
