--- a/css/main.css
+++ b/css/main.css
@@ -125,6 +125,18 @@ body {
 	display: block;
 }
 
+#image-container {
+	position:fixed;
+}
+
+#image-container img {
+	float:right;
+	display:none;
+}
+
+#scroll-tablet-container img {
+}
+
 /*
  * media queries
  * —
