--- a/css/main.css
+++ b/css/main.css
@@ -7,7 +7,7 @@
 
 body {
 
-	background: url('../imgs/fond.gif');
+	background: url('../imgs/fond1.gif');
 	background-size: repeat;
 	background-attachment: fixed;
 
