--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,7 @@ h3 {
 	position: absolute;
 	width: 60px;
 	height: 60px;
+	border: 5px solid black;
 	border-radius: 30px;
 	background-color: black;
 }
@@ -40,7 +41,7 @@ h3 {
 	margin:0;
 	width: 260px;
 	height: 260px;
-	border: 7px solid black;
+	border: 5px solid black;
 	border-radius: 50%;
 	background-color: white;
 }
@@ -50,7 +51,7 @@ h3 {
 	margin:0;
 	width: 260px;
 	height: 260px;
-	border: 7px solid black;
+	border: 5px solid black;
 	border-radius: 50%;
 	background-color: white;
 	display:none;
@@ -166,7 +167,7 @@ h3 {
 	overflow:hidden; 
 	top:0; 
 	left:0;">
-	z-index: -1
+	z-index: -1;
 }
 /*
  * media queries
