--- a/css/main.css
+++ b/css/main.css
@@ -159,7 +159,7 @@ h3 {
 
 
 
-#img-container-fat-tablet {
+.img-container-fat-tablet {
 	position:absolute; 
 	max-width:none; 
 	width:6000px; 
@@ -189,9 +189,17 @@ h3 {
 }
 
 @media (orientation: landscape) {
-
+	img:nth-child(0) {
+		left: 50.35%;
+		top: 2.7%;
+		width: 8.5%;
+	}
 }
 
 @media (orientation: portrait) {
-
+	 img:nth-child(0) {
+		left: 40.35%;
+		top: 31.7%;
+		width: 3.5%;
+	}
 }
